--- a/.github/workflows/VerifyLicenseActivation.yml
+++ b/.github/workflows/VerifyLicenseActivation.yml
@@ -1,16 +1,15 @@
 # Summary: Checks the licence, email and password env secrets setup GitHub
-name: Publish Build 🚢
+name: Verify License Activation ✏️
 
 on:
   workflow_dispatch: {}
 
 jobs:
   activation:
-    name: Verify licence Activation
+    name: Verify License Activation
     runs-on: ubuntu-latest
     steps:
-      - name: Unity - Check Active Licence
-        uses: game-ci/unity-activate@v2.0.0
+      - uses: game-ci/unity-activate@v2.0.0
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
